# Gesture_TFlite_module_App

./: .gitignore  README.md  build.gradle  log.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/gesture_classification/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 0523233938-wzl-3-up-0-imgmask.csv  0523234013-wzl-3-span-0-imgenv.csv  0525151935-yyj-4-right-1-imgenv.csv  0525201304-ly-3-right-0-imgenv.csv  0525204625-fyw-4-left-0-imgenv.csv  right.csv
app/src/main/assets/classification_model/: gestrue_class5_label.txt  gestrue_class7_label.txt  gestrue_class_label.txt  mobilenet_v3.tflite
app/src/main/cpp/: CMakeLists.txt  CMakeLists_back.txt  native-lib.cpp
app/src/main/cpp/gesture_tflite/: CMakeLists.txt  tflite_classification.cpp  tflite_classification.h  util_tflite.cpp  util_tflite.h
app/src/main/include/: tflite_classification.h
app/src/main/java/com/example/gesture_classification/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gesture_classification/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
